# ci-cd-practice-via-github-actions

./: .dockerignore  .flake8  Dockerfile  README.md  main.py  math_ops.py  pyproject.toml  temp.txt
.github/workflows/: docker-publish.yml  hello-world.yml  pipeline.yml  python-ci.yml
tests/: test_math_ops.py
