[project]
name = "github-actions-mastery"
version = "0.1.0"
description = "Learning GitHub Actions with uv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "black>=25.11.0",
    "isort>=6.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = []
